--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -9,10 +9,11 @@ fdisk -l
 fdisk /dev/sdX
 
 # layout:
-# GPT + 500M EFI Part + remaining part
+# GPT + 500M EFI Part
+# remaining part as Linux root filesystem
 # EFI part is 1
 
-mkfs.btrfs /dev/sdX2
+mkfs.btrfs --csum sha256 /dev/sdX2
 mkfs.fat -F 32 /dev/sdX1
 
 mount /dev/sdX2 /mnt
