--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -51,5 +51,16 @@ grub-install --target=x86_64-efi --efi-directory=/boot --bootloader-id=GRUB
 pacman -S intel-ucode
 grub-mkconfig -o /boot/grub/grub.cfg
 
+# Ctrl-d to exit
+umount -R /mnt
+reboot
+# Remember to remove the USB disk
 
+# After reboot and login
+useradd -m xx
+passwd xx
+
+systemctl start dhcpcd
+git clone https://github.com/ekk1/dotfiles-open
+# run scripts/11.init-archlinux.sh
 ```
