--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -13,13 +13,18 @@ fdisk /dev/sdX
 # remaining part as Linux root filesystem
 # EFI part is 1
 
-mkfs.btrfs --csum sha256 /dev/sdX2
-mkfs.fat -F 32 /dev/sdX1
+mkfs.btrfs --csum sha256 /dev/vda2
+mkfs.fat -F 32 /dev/vda1
+lsblk -f
 
-mount /dev/sdX2 /mnt
-mount --mkdir /dev/sdX1 /mnt/boot
+mount /dev/vda2 /mnt
+mount --mkdir /dev/vda1 /mnt/boot
 
 vim /etc/pacman.d/mirrorlist
+
+# possibly need to run this before pacstrap if vm is under restricted network and http(s) proxy is used
+pacman-key --init
+pacman-key --populate
 
 pacstrap -K /mnt base base-devel linux linux-firmware vim git
 
@@ -31,21 +36,25 @@ ln -sf /usr/share/zoneinfo/Region/City /etc/localtime
 
 hwclock --systohc
 
-vim /etc/locale.gen
+echo "zh_CN.UTF-8 UTF-8" >> /etc/locale.gen
+echo "zh_CN.GB18030 GB18030" >> /etc/locale.gen
+echo "zh_CN.GBK GBK" >> /etc/locale.gen
+echo "zh_CN GB2312" >> /etc/locale.gen
+echo "ja_JP.UTF-8 UTF-8" >> /etc/locale.gen
+echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen
 
 locale-gen
 
-vim /etc/locale.conf
-LANG=en_US.UTF-8
+echo "LANG=en_US.UTF-8" > /etc/locale.conf
 
-vim /etc/hostname
-xxx
+echo "testvm" > /etc/hostname
 
 passwd root
 
 pacman -S grub
 pacman -S efibootmgr
 
+grub-install --target=x86_64-efi --efi-directory=/boot --bootloader-id=GRUB
 grub-install --target=x86_64-efi --efi-directory=/boot --bootloader-id=GRUB
 
 pacman -S intel-ucode
