--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -13,6 +13,8 @@ fdisk /dev/sdX
 # remaining part as Linux root filesystem
 # EFI part is 1
 
+# if MBR: no EFI
+
 mkfs.btrfs --csum sha256 /dev/vda2
 mkfs.fat -F 32 /dev/vda1
 lsblk -f
@@ -55,7 +57,8 @@ pacman -S grub
 pacman -S efibootmgr
 
 grub-install --target=x86_64-efi --efi-directory=/boot --bootloader-id=GRUB
-grub-install --target=x86_64-efi --efi-directory=/boot --bootloader-id=GRUB
+
+grub-install --target=i386-pc /dev/vda
 
 pacman -S intel-ucode
 grub-mkconfig -o /boot/grub/grub.cfg
