--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -6,7 +6,7 @@ timedatectl
 
 # Format disk
 fdisk -l
-fdisk /dev/sdX
+fdisk /dev/vda
 
 # layout:
 # GPT + 500M EFI Part
@@ -15,12 +15,12 @@ fdisk /dev/sdX
 
 # if MBR: no EFI
 
-mkfs.btrfs --csum sha256 /dev/vda2
+mkfs.btrfs --csum sha256 /dev/vda1
 mkfs.fat -F 32 /dev/vda1
 lsblk -f
 
-mount /dev/vda2 /mnt
-mount --mkdir /dev/vda1 /mnt/boot
+mount /dev/vda1 /mnt
+# mount --mkdir /dev/vda1 /mnt/boot
 
 vim /etc/pacman.d/mirrorlist
 
