--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -13,13 +13,19 @@ fdisk /dev/vda
 # remaining part as Linux root filesystem
 # EFI part is 1
 
-# if MBR: no EFI
+# if vm with MBR: no EFI, no GPT
 
-mkfs.btrfs --csum sha256 /dev/vda1
+# if physical
+mkfs.btrfs --csum sha256 /dev/vda2
 mkfs.fat -F 32 /dev/vda1
+
+# if vm with MBR, must
+mkfs.ext4 /dev/vda1
+
 lsblk -f
 
 mount /dev/vda1 /mnt
+mount /dev/vda2 /mnt
 # mount --mkdir /dev/vda1 /mnt/boot
 
 vim /etc/pacman.d/mirrorlist
@@ -28,7 +34,7 @@ vim /etc/pacman.d/mirrorlist
 pacman-key --init
 pacman-key --populate
 
-pacstrap -K /mnt base base-devel linux linux-firmware vim git
+pacstrap -K /mnt base base-devel linux linux-firmware vim git dhcpcd
 
 genfstab -U /mnt >> /mnt/etc/fstab
 
@@ -57,7 +63,6 @@ pacman -S grub
 pacman -S efibootmgr
 
 grub-install --target=x86_64-efi --efi-directory=/boot --bootloader-id=GRUB
-
 grub-install --target=i386-pc /dev/vda
 
 pacman -S intel-ucode
