--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -1,6 +1,50 @@
 ## Install linux
 
 ```bash
+# Quick VM install
+timedatectl
+fdisk -l
+fdisk /dev/vda
+# n enter enter enter p w
+mkfs.ext4 /dev/vda1
+lsblk -f
+mount /dev/vda1 /mnt
+vim /etc/pacman.d/mirrorlist
+pacman-key --init
+pacman-key --populate
+pacstrap -K /mnt base base-devel linux linux-firmware
+genfstab -U /mnt >> /mnt/etc/fstab
+arch-chroot /mnt
+ln -sf /usr/share/zoneinfo/Asia/Hong_Kong /etc/localtime
+hwclock --systohc
+echo "zh_CN.UTF-8 UTF-8" >> /etc/locale.gen
+echo "zh_CN.GB18030 GB18030" >> /etc/locale.gen
+echo "zh_CN.GBK GBK" >> /etc/locale.gen
+echo "zh_CN GB2312" >> /etc/locale.gen
+echo "ja_JP.UTF-8 UTF-8" >> /etc/locale.gen
+echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen
+locale-gen
+echo "LANG=en_US.UTF-8" > /etc/locale.conf
+echo "testvm" > /etc/hostname
+useradd -m sa
+passwd root
+passwd sa
+pacman -S grub openssh vim git dhcpcd
+grub-install --target=i386-pc /dev/vda
+pacman -S intel-ucode
+grub-mkconfig -o /boot/grub/grub.cfg
+systemctl enable sshd dhcpcd
+# Ctrl-D
+umount -R /mnt
+shutdown
+# Remember to remove the USB disk
+# After reboot and login
+git clone https://github.com/ekk1/dotfiles-open
+# run scripts/11.init-archlinux.sh
+```
+
+
+```bash
 # Sync time
 timedatectl
 
@@ -34,13 +78,14 @@ vim /etc/pacman.d/mirrorlist
 pacman-key --init
 pacman-key --populate
 
-pacstrap -K /mnt base base-devel linux linux-firmware vim git dhcpcd
+pacstrap -K /mnt base base-devel linux linux-firmware
 
 genfstab -U /mnt >> /mnt/etc/fstab
 
 arch-chroot /mnt
 
-ln -sf /usr/share/zoneinfo/Region/City /etc/localtime
+# ln -sf /usr/share/zoneinfo/Region/City /etc/localtime
+ln -sf /usr/share/zoneinfo/Asia/Hong_Kong /etc/localtime
 
 hwclock --systohc
 
@@ -59,7 +104,7 @@ echo "testvm" > /etc/hostname
 
 passwd root
 
-pacman -S grub
+pacman -S grub openssh vim git dhcpcd
 pacman -S efibootmgr
 
 grub-install --target=x86_64-efi --efi-directory=/boot --bootloader-id=GRUB
