[update] remove powerline && use helix by default

--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -32,6 +32,7 @@ passwd sa
 pacman -S grub openssh vim git dhcpcd
 grub-install --target=i386-pc /dev/vda
 pacman -S intel-ucode
+# edit /etc/default/grub , timeout to 1
 grub-mkconfig -o /boot/grub/grub.cfg
 systemctl enable sshd dhcpcd
 # Ctrl-D
