--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -29,7 +29,7 @@ echo "testvm" > /etc/hostname
 useradd -m sa
 passwd root
 passwd sa
-pacman -S grub openssh vim git dhcpcd
+pacman -S grub openssh vim git dhcpcd cmake
 grub-install --target=i386-pc /dev/vda
 pacman -S intel-ucode
 # edit /etc/default/grub , timeout to 1
