[update] better arch install

--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -30,6 +30,15 @@ useradd -m sa
 passwd root
 passwd sa
 pacman -S grub openssh vim git dhcpcd cmake
+pacman -S tmux tree htop man-db
+pacman -S nfs-utils smartmontools ranger
+pacman -S chrony ntfs-3g lsof
+pacman -S tig ncdu rsync btrfs-progs unrar
+pacman -S p7zip python openbsd-netcat
+pacman -S powerline tk wget
+pacman -S linux-firmware-qlogic
+pacman -S neofetch helix fish
+chsh -s /bin/fish
 grub-install --target=i386-pc /dev/vda
 pacman -S intel-ucode
 # edit /etc/default/grub , timeout to 1
