--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -51,6 +51,11 @@ shutdown
 # After reboot and login
 git clone https://github.com/ekk1/dotfiles-open
 # run scripts/11.init-archlinux.sh
+# if no GUI need, you can skip it
+
+# build llama.cpp
+# cmake -B build -DBUILD_SHARED_LIBS=OFF
+# cmake --build build --config Release
 ```
 
 
