--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -56,6 +56,7 @@ git clone https://github.com/ekk1/dotfiles-open
 # build llama.cpp
 # cmake -B build -DBUILD_SHARED_LIBS=OFF
 # cmake --build build --config Release
+# ./llama.cpp-master/build/bin/llama-server -m DeepSeek-R1-Distill-Qwen-14B-Q4_K_M.gguf --cache-type-k q8_0 --threads 60
 ```
 
 
