[update] arch install

--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -42,11 +42,12 @@ chsh -s /bin/fish
 grub-install --target=i386-pc /dev/vda
 pacman -S intel-ucode
 # edit /etc/default/grub , timeout to 1
+vim /etc/default/grub
 grub-mkconfig -o /boot/grub/grub.cfg
 systemctl enable sshd dhcpcd
 # Ctrl-D
 umount -R /mnt
-shutdown
+shutdown -a 0
 # Remember to remove the USB disk
 # After reboot and login
 git clone https://github.com/ekk1/dotfiles-open
@@ -61,84 +62,74 @@ git clone https://github.com/ekk1/dotfiles-open
 
 
 ```bash
+# This is for Physical Device
 # Sync time
 timedatectl
 
 # Format disk
 fdisk -l
-fdisk /dev/vda
-
+fdisk /dev/sda
+fdisk /dev/nvme0n1
 # layout:
 # GPT + 500M EFI Part
 # remaining part as Linux root filesystem
 # EFI part is 1
 
-# if vm with MBR: no EFI, no GPT
-
-# if physical
-mkfs.btrfs --csum sha256 /dev/vda2
-mkfs.fat -F 32 /dev/vda1
-
-# if vm with MBR, must
-mkfs.ext4 /dev/vda1
-
+mkfs.btrfs --csum sha256 /dev/sda2
+mkfs.fat -F 32 /dev/sda1
 lsblk -f
 
-mount /dev/vda1 /mnt
-mount /dev/vda2 /mnt
-# mount --mkdir /dev/vda1 /mnt/boot
+mount /dev/sda2 /mnt
+mount --mkdir /dev/sda1 /mnt/boot
 
 vim /etc/pacman.d/mirrorlist
-
-# possibly need to run this before pacstrap if vm is under restricted network and http(s) proxy is used
 pacman-key --init
 pacman-key --populate
-
 pacstrap -K /mnt base base-devel linux linux-firmware
 
 genfstab -U /mnt >> /mnt/etc/fstab
-
 arch-chroot /mnt
-
-# ln -sf /usr/share/zoneinfo/Region/City /etc/localtime
 ln -sf /usr/share/zoneinfo/Asia/Hong_Kong /etc/localtime
-
 hwclock --systohc
-
 echo "zh_CN.UTF-8 UTF-8" >> /etc/locale.gen
 echo "zh_CN.GB18030 GB18030" >> /etc/locale.gen
 echo "zh_CN.GBK GBK" >> /etc/locale.gen
 echo "zh_CN GB2312" >> /etc/locale.gen
 echo "ja_JP.UTF-8 UTF-8" >> /etc/locale.gen
 echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen
-
 locale-gen
-
 echo "LANG=en_US.UTF-8" > /etc/locale.conf
-
-echo "testvm" > /etc/hostname
-
+echo "tester" > /etc/hostname
+useradd -m sa
 passwd root
-
-pacman -S grub openssh vim git dhcpcd
-pacman -S efibootmgr
+passwd sa
+pacman -S grub openssh vim git dhcpcd cmake
+pacman -S tmux tree htop man-db
+pacman -S nfs-utils smartmontools ranger
+pacman -S chrony ntfs-3g lsof
+pacman -S tig ncdu rsync btrfs-progs unrar
+pacman -S p7zip python openbsd-netcat
+pacman -S powerline tk wget
+pacman -S linux-firmware-qlogic
+pacman -S neofetch helix fish
+chsh -s /bin/fish
+su sa
+chsh -s /bin/fish
 
 grub-install --target=x86_64-efi --efi-directory=/boot --bootloader-id=GRUB
-grub-install --target=i386-pc /dev/vda
 
 pacman -S intel-ucode
+vim /etc/default/grub
+# TIMEOUT=1
 grub-mkconfig -o /boot/grub/grub.cfg
 
+# DO NOT ENABLE SSH AND DHCPCD
 # Ctrl-d to exit
 umount -R /mnt
 reboot
+shutdown -a 0
 # Remember to remove the USB disk
 
-# After reboot and login
-useradd -m xx
-passwd xx
-
-systemctl start dhcpcd
 git clone https://github.com/ekk1/dotfiles-open
 # run scripts/11.init-archlinux.sh
 ```
