--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -104,6 +104,7 @@ useradd -m sa
 passwd root
 passwd sa
 pacman -S grub openssh vim git dhcpcd cmake
+pacman -S iwd
 pacman -S tmux tree htop man-db
 pacman -S nfs-utils smartmontools ranger
 pacman -S chrony ntfs-3g lsof
