--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -59,6 +59,17 @@ git clone https://github.com/ekk1/dotfiles-open
 # cmake -B build -DBUILD_SHARED_LIBS=OFF
 # cmake --build build --config Release
 # ./llama.cpp-master/build/bin/llama-server -m DeepSeek-R1-Distill-Qwen-14B-Q4_K_M.gguf --cache-type-k q8_0 --threads 60
+
+# For minicpm
+# ./llama-minicpmv-cli -m ../MiniCPM-o-2_6/model/ggml-model-f16.gguf --mmproj ../MiniCPM-o-2_6/mmproj-model-f16.gguf -c 4096 --temp 0.7 --top-p 0.8 --top-k 100 --repeat-penalty 1.05 --image xx.jpg -p "What is in the image?"
+
+# For embedding
+# ./embedding -ngl 99 -m nomic-embed-text-v1.5.f16.gguf -c 8192 -b 8192 --rope-scaling yarn --rope-freq-scale .75 -p 'search_query: What is TSNE?'
+# search_query: What is TSNE?
+# search_query: Who is Laurens Van der Maaten?
+# ./embedding -ngl 99 -m nomic-embed-text-v1.5.f16.gguf -c 8192 -b 8192 --rope-scaling yarn --rope-freq-scale .75 -f texts.txt
+
+# For example, if you are implementing a RAG application, you embed your documents as search_document: <text here> and embed your user queries as search_query: <text here>.
 ```
 
 
