--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -125,7 +125,8 @@ pacman -S p7zip python openbsd-netcat
 pacman -S powerline tk wget
 pacman -S linux-firmware-qlogic
 pacman -S neofetch helix fish
-pacman -S chafa
+pacman -S chafa efibootmgr
+pacman -S bluez bluez-utils
 chsh -s /bin/fish
 su sa
 chsh -s /bin/fish
