--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -10,6 +10,7 @@ mkfs.ext4 /dev/vda1
 lsblk -f
 mount /dev/vda1 /mnt
 vim /etc/pacman.d/mirrorlist
+export https_proxy=http://127.0.0.1:8118
 pacman-key --init
 pacman-key --populate
 pacstrap -K /mnt base base-devel linux linux-firmware
