--- a/scripts/00.install-arch.md
+++ b/scripts/00.install-arch.md
@@ -30,16 +30,15 @@ echo "testvm" > /etc/hostname
 useradd -m sa
 passwd root
 passwd sa
-pacman -S grub openssh vim git dhcpcd cmake
-pacman -S tmux tree htop man-db
-pacman -S nfs-utils smartmontools ranger
-pacman -S chrony ntfs-3g lsof
-pacman -S tig ncdu rsync btrfs-progs unrar
-pacman -S p7zip python openbsd-netcat
-pacman -S powerline tk wget
-pacman -S linux-firmware-qlogic
-pacman -S neofetch helix fish
-pacman -S chafa
+pacman -S grub openssh vim git dhcpcd cmake \
+    tmux tree htop man-db ranger lsof tig ncdu rsync unrar \
+    p7zip python openbsd-netcat wget \
+    powerline neofetch helix fish chafa
+
+pacman -S nfs-utils smartmontools \
+    chrony ntfs-3g btrfs-progs \
+    tk linux-firmware-qlogic
+
 chsh -s /bin/fish
 grub-install --target=i386-pc /dev/vda
 pacman -S intel-ucode
